[package]
name = "rustdoc-index"
version = "0.5.0"
authors = ["octaltree <octaltree@users.noreply.github.com>"]
edition = "2021"
description = "A fast listing tool for rustdoc"
license = "MIT"
documentation = "https://docs.rs/rustdoc-index/"
repository = "https://github.com/octaltree/rustdoc-index"
categories = ["development-tools"]
keywords = ["rustdoc"]

[[bin]]
name = "cargo-listdoc"
path = "src/main.rs"

[dependencies]
thiserror = "1.0.31"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
rayon = "1.5.2"
unescape = "0.1.0"
serde_repr = "0.1.8"
cargo_metadata = "0.14.2"
tokio = { version = "1.18.2", features = ["rt-multi-thread", "macros"] }
structopt = "0.3.26"
#string_cache = "0.8.1"
#timey = "0.2.0"

[dev-dependencies]
env_logger = "0.9.0"
log = "0.4.17"
